--- a/docs/glfwrm.tex
+++ b/docs/glfwrm.tex
@@ -3203,6 +3203,15 @@ provide support for context profiles.  Where this extension is unavailable,
 setting the GLFW\_OPENGL\_PROFILE hint to anything but zero will cause
 \textbf{glfwOpenWindow} to fail.
 
+%-------------------------------------------------------------------------
+\section{OpenGL 3.0+ on Mac OS X}
+
+At the time of writing, Mac OS X still does not support OpenGL 3.0 or above.
+Because of this, the GLFW\_OPENGL\_VERSION\_MAJOR and
+GLFW\_OPENGL\_VERSION\_MINOR hints will fail if given a version above 2.1, the
+GLFW\_OPENGL\_DEBUG\_CONTEXT hint will have no effect, and setting the
+GLFW\_OPENGL\_PROFILE or GLFW\_FORWARD\_COMPAT hints to a non-zero value will
+cause \textbf{glfwOpenWindow} to fail.
 
 
 \end{document}
