OpenGL is a registered trademark according to modern documentation.

--- a/docs/glfwdoc.sty
+++ b/docs/glfwdoc.sty
@@ -16,7 +16,7 @@
 \usepackage{times}
 
 % Logo macros
-\newcommand{\OpenGL}[1][0]{OpenGL\texttrademark}
+\newcommand{\OpenGL}[1][0]{OpenGL\textsuperscript{\textregistered}}
 \newcommand{\GLFW}[1][0]{GLFW}
 
 % Encoding
