--- a/docs/glfwrm.tex
+++ b/docs/glfwrm.tex
@@ -3206,7 +3206,7 @@ setting the GLFW\_OPENGL\_PROFILE hint to anything but zero will cause
 %-------------------------------------------------------------------------
 \section{OpenGL 3.0+ on Mac OS X}
 
-At the time of writing, Mac OS X still does not support OpenGL 3.0 or above.
+At the time of writing, Mac OS X does not support OpenGL 3.0 or above.
 Because of this, the GLFW\_OPENGL\_VERSION\_MAJOR and
 GLFW\_OPENGL\_VERSION\_MINOR hints will fail if given a version above 2.1, the
 GLFW\_OPENGL\_DEBUG\_CONTEXT hint will have no effect, and setting the
