--- a/docs/glfwug.tex
+++ b/docs/glfwug.tex
@@ -144,7 +144,7 @@ By default, the regular \textbf{gl.h} header is included. If you wish to include
 the draft \textbf{gl3.h} header instead, define \textbf{GLFW\_INCLUDE\_GL3}
 before the inclusion of the GLFW header.
 
-By default, the \textbf{glu.h} header is included.  If you wish to avoid this,
+Also by default, the \textbf{glu.h} header is included.  If you wish to avoid this,
 define \textbf{GLFW\_NO\_GLU} before the inclusion of the GLFW header.
 
 
