--- a/docs/glfwrm.tex
+++ b/docs/glfwrm.tex
@@ -222,11 +222,11 @@ etc.).
 %-------------------------------------------------------------------------
 \section{Threads}
 \GLFW\ has functions for creating threads, which means that it is possible
-to make multi-threaded applications with \GLFW . The thread that calls
-\textbf{glfwInit} becomes the main thread, and it is recommended that all
-\GLFW\ and \OpenGL\ functions are called from the main thread. Additional
-threads should primarily be used for CPU heavy tasks or for managing
-other resources such as file or sound I/O.
+to make multi-threaded applications with \GLFW . It is recommended that all
+\OpenGL\ functions and all \GLFW\ functions except those relating to threading
+and time are called only from the main thread, i.e. the one from which
+\textbf{main} is called. Additional threads should primarily be used for CPU
+heavy tasks or for managing other resources such as file or sound I/O.
 
 It should be noted that the current implementation of \GLFW\ is not thread
 safe, so you should never call \GLFW\ functions from different threads.
